force-app/main/default/objects/Case_Project_Tracker__c/Case_Project_Tracker__c.object-meta.xml
<CustomObject>
    <description>The Junction Object between Case and Project tracker</description>
    <label>Case-Project Tracker</label>
    <nameField>
        <displayFormat>CPT-{0000}</displayFormat>
        <label>Case-Project Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case-Project Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>