force-app/main/default/objects/Case_Project_Tracker__c/fields/Case_Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Case_Date_Opened__c</fullName>
    <formula>DATEVALUE( RelatedCase__r.CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Date Opened</label>
    <type>Date</type>
</CustomField>