force-app/main/default/objects/Case_Project_Tracker__c/fields/Formula_Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Formula_Case_Description__c</fullName>
    <formula>RelatedCase__r.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Description</label>
    <type>Text</type>
</CustomField>