force-app/main/default/objects/Case_Project_Tracker__c/fields/Project_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Project_Tracker__c</fullName>
    <label>Project Tracker</label>
    <referenceTo>Project_Tracker__c</referenceTo>
    <relationshipLabel>Case-Project Trackers</relationshipLabel>
    <relationshipName>Case_Project_Trackers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>