force-app/main/default/objects/Case_Project_Tracker__c/fields/RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>RelatedCase__c</fullName>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case-Project Trackers</relationshipLabel>
    <relationshipName>Case_Project_Trackers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>